Change z-index for alerts/banners and dialogs, preventing overlay

--- a/labsystem/scss/components/_lab-alerts.scss
+++ b/labsystem/scss/components/_lab-alerts.scss
@@ -86,7 +86,7 @@ $alerts-line-height: 20px;
   position: -webkit-sticky;
 
   top: 0;
-  z-index: 2;
+  z-index: 5;
 
   &--info {
     @extend .lab-banner;
